# vulkan-renderer

./: .gitignore  CMakeLists.txt  file.txt
include/: memory_alias.h  vulkan_error_handle.h  vulkan_renderer.h
shaders/: block.frag  block.vert
src/: close.c  initialize.c  spirv_shaders.c
src/vulkan/: create_device.c  create_instance.c  create_pipeline.c  create_render_pass.c  create_shader_module.c  create_swapchain.c  error_handle.c  get_queue.c  get_surface_data.c  prepare_image_views.c  select_driver.c
